Fix vulnerable dependencies and command injection/SSRF vulnerabilities
Co-authored-by: IAmATeaPot418 <5336227+IAmATeaPot418@users.noreply.github.com>